force-app/main/default/objects/Order__c/fields/Client_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Client_EmailId__c</fullName>
    <label>Client EmailId</label>
    <type>Email</type>
</CustomField>