force-app/main/default/objects/Order__c/fields/Client_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Order_Id__c</fullName>
    <label>Client Order Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>