force-app/main/default/objects/Order__c/fields/H_Asset_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>H_Asset_Payment_Status__c</fullName>
    <label>H Asset Payment Status</label>
    <summaryFilterItems>
        <field>Order_Item__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Payment Requested</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>