force-app/main/default/objects/Order__c/fields/h_Trigger_Time_05__c.field-meta.xml
<CustomField>
    <fullName>h_Trigger_Time_05__c</fullName>
    <formula>DATETIMEVALUE(CreatedDate)-0.03800</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>h Trigger Time 05</label>
    <type>DateTime</type>
</CustomField>