force-app/main/default/objects/Order__c/fields/Instruction_Type__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Type__c</fullName>
    <label>Instruction Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>