force-app/main/default/objects/Order__c/fields/Is_Sent_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Sent_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If yes, please tick the checkbox and click &apos;Save&apos; button</inlineHelpText>
    <label>Do you want to send invoice(s)?</label>
    <type>Checkbox</type>
</CustomField>