force-app/main/default/objects/Order__c/fields/Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Late Fee (Added in USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>