force-app/main/default/objects/Order__c/fields/Late_Fee_Alert__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Alert__c</fullName>
    <formula>Client__r.Late_Fee_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Fee Alert</label>
    <type>Text</type>
</CustomField>