force-app/main/default/objects/Order__c/fields/Late_Fee_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Calculated__c</fullName>
    <formula>IF ( 
     (nRenewals_after_Instruction_Window__c&gt;0)
     ,IF (
          ((nRenewals_after_Instruction_Window__c * 10)&lt;100)
          , 100
          , IF(
               ((nRenewals_after_Instruction_Window__c * 10)&gt;1000)
               , 1000
               , nRenewals_after_Instruction_Window__c * 10 
          ) 
     )     
     ,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Fee (Calculated  in USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>