force-app/main/default/objects/Order__c/fields/nRenewals_after_Instruction_Window__c.field-meta.xml
<CustomField>
    <fullName>nRenewals_after_Instruction_Window__c</fullName>
    <inlineHelpText>No. of instructed renewals after instruction due date</inlineHelpText>
    <label>No. of Renewals (Late Fee Applicable)</label>
    <summaryFilterItems>
        <field>Order_Item__c.Is_Instructed_After_Instruction_Window__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Order_Item__c.Renewal_Instruction__c</field>
        <operation>equals</operation>
        <value>Renew</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>