force-app/main/default/objects/Order__c/fields/nRenewals_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>nRenewals_Cancelled__c</fullName>
    <label>Cancelled Renewals</label>
    <summaryFilterItems>
        <field>Order_Item__c.Renewal_Instruction__c</field>
        <operation>equals</operation>
        <value>Cancel</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>