force-app/main/default/objects/Order__c/fields/nRush_Renewals__c.field-meta.xml
<CustomField>
    <fullName>nRush_Renewals__c</fullName>
    <inlineHelpText>No. of renewals received within 20 business days prior to the due date</inlineHelpText>
    <label>No. of renewals (Rush fee appliicable)</label>
    <summaryFilterItems>
        <field>Order_Item__c.Is_Instructed_during_Rush__c</field>
        <operation>lessOrEqual</operation>
        <value>20</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Order_Item__c.Renewal_Instruction__c</field>
        <operation>equals</operation>
        <value>Renew</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>