force-app/main/default/objects/Order__c/fields/Order_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_USD__c</fullName>
    <label>Order Amount</label>
    <summarizedField>Order_Item__c.Invoice_Amount_When_Instruct__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Item__c.Billing_Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Order_Item__c.Renewal_Instruction__c</field>
        <operation>equals</operation>
        <value>Renew</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>