force-app/main/default/objects/Order__c/fields/Order_Amount_USD_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_USD_Total__c</fullName>
    <formula>Order_Amount_USD__c +  Late_Fee__c +  Rush_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>