force-app/main/default/objects/Order__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Order No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>