force-app/main/default/objects/Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <displayFormat>OID-{000000000}</displayFormat>
    <label>Order Number</label>
    <type>AutoNumber</type>
</CustomField>