force-app/main/default/objects/Order__c/fields/Order_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference_Number__c</fullName>
    <label>Order Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>