force-app/main/default/objects/Order__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Invoicing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Invoiced</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Invoice to be modified</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Invoice Generated</fullName>
                <isActive>false</isActive>
                <label>Invoice Generated</label>
            </value>
            <value>
                <fullName>Invoice In Progress</fullName>
                <isActive>false</isActive>
                <label>Invoice In Progress</label>
            </value>
            <value>
                <fullName>Payment Received (Full)</fullName>
                <isActive>false</isActive>
                <label>Payment Received (Full)</label>
            </value>
            <value>
                <fullName>Payment Received (Partial)</fullName>
                <isActive>false</isActive>
                <label>Payment Received (Partial)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>