force-app/main/default/objects/Order__c/fields/Renewal_Team__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Group__c.Group_Type__c</field>
            <operation>equals</operation>
            <value>Renewals Team</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Group__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>