force-app/main/default/objects/Order__c/fields/Rush_Fee_Alert__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee_Alert__c</fullName>
    <formula>Client__r.Rush_Fee_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rush Fee Alert</label>
    <type>Text</type>
</CustomField>