force-app/main/default/objects/Order__c/fields/Rush_Fee_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee_Calculated__c</fullName>
    <formula>nRush_Renewals__c * 50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rush Fee (Calculated  in USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>