force-app/main/default/objects/Order__c/fields/Total_Asset__c.field-meta.xml
<CustomField>
    <fullName>Total_Asset__c</fullName>
    <label>Total Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>