force-app/main/default/objects/Order__c/fields/Total_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Total_Renewals__c</fullName>
    <label>Total Renewals</label>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>