force-app/main/default/objects/Order__c/fields/Updated_Late_fee_Rush_fee__c.field-meta.xml
<CustomField>
    <fullName>Updated_Late_fee_Rush_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Late fee Rush fee</label>
    <type>Checkbox</type>
</CustomField>