force-app/main/default/objects/Order__c/fields/Validation_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Request_Status__c</fullName>
    <label>Validation Request Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>