force-app/main/default/objects/Order__c/validationRules/To_be_Invoiced_validation_For_ADU.validationRule-meta.xml
<ValidationRule>
    <fullName>To_be_Invoiced_validation_For_ADU</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name == &quot;ADU&quot;,
ISPICKVAL( Payment_Status__c , &quot;To be Invoiced&quot;), ISCHANGED(Payment_Status__c ) )</errorConditionFormula>
    <errorMessage>ADU should not be allowed to update payment status as To be Invoiced</errorMessage>
</ValidationRule>