force-app/main/default/objects/Order__c/listViews/Customer_Invoicing.listView-meta.xml
<ListView>
    <fullName>Customer_Invoicing</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Order_Amount_USD_Total__c</columns>
    <columns>Late_Fee__c</columns>
    <columns>Rush_Fee__c</columns>
    <columns>Order_Amount_EUR__c</columns>
    <columns>Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Customer Invoicing - All Orders</label>
</ListView>