force-app/main/default/objects/Order__c/listViews/Customer_Invoicing_Only_New.listView-meta.xml
<ListView>
    <fullName>Customer_Invoicing_Only_New</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Total_Renewals__c</columns>
    <columns>nRenewals_after_Instruction_Window__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>nRenewals_Cancelled__c</columns>
    <columns>Order_Amount_USD_Total__c</columns>
    <columns>Order_Amount_EUR__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Client_Order_Id__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Total_Asset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>To be Invoiced</value>
    </filters>
    <label>Customer Invoicing - New Orders</label>
</ListView>