force-app/main/default/objects/Order__c/listViews/Payment_To_Be_Received_orders.listView-meta.xml
<ListView>
    <fullName>Payment_To_Be_Received_orders</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Client__c</columns>
    <columns>Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Payment Received (Partial)</value>
    </filters>
    <label>Unpaid Orders</label>
</ListView>