force-app/main/default/objects/Order__c/listViews/Updated_Orders.listView-meta.xml
<ListView>
    <fullName>Updated_Orders</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Client__c</columns>
    <columns>Total_Renewals__c</columns>
    <columns>Order_Amount_USD_Total__c</columns>
    <columns>Late_Fee__c</columns>
    <columns>Rush_Fee__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>nRenewals_Cancelled__c</columns>
    <columns>Order_Amount_EUR__c</columns>
    <columns>Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Updated_Late_fee_Rush_fee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Invoice to be modified</value>
    </filters>
    <label>Amended Orders</label>
</ListView>