force-app/main/default/objects/Order__c/listViews/X2_Customer_Invoicing_Invoiced.listView-meta.xml
<ListView>
    <fullName>X2_Customer_Invoicing_Invoiced</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Order_Amount_USD_Total__c</columns>
    <columns>Late_Fee__c</columns>
    <columns>Rush_Fee__c</columns>
    <columns>Order_Amount_EUR__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Invoiced</value>
    </filters>
    <label>Customer Invoicing - Invoiced</label>
</ListView>